[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/bow.png" type="Texture" id=1]
[ext_resource path="res://scripts/bowWeapon.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Cartoon throw away sound effect (peww) [ ezmp3.cc ].mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.51959, 5.93333 )

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 3 )
random_pitch = 1.2

[node name="bow" type="Node2D"]
script = ExtResource( 2 )
weaponCooldown = 1.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 40, 40 )
shape = SubResource( 1 )

[node name="shootCooldown" type="Timer" parent="."]

[node name="anchor" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="anchor"]
position = Vector2( 65, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="shootCooldown" to="." method="_on_shootCooldown_timeout"]
